syntax = "proto3";

package cm.v1;

option go_package = "pratikshakuldeep456/campaign-manager/gen/go/cm/v1;cmv1";

service CampaignEvaluationService {
  rpc Evaluate(EvaluateRequest) returns (EvaluateResponse) {}
}

message ItemInput {
  string sku_id = 1;
  double base_price = 2;
}

message EvaluateRequest {
  string store_id = 1;
  string user_id = 2;
  repeated string user_groups = 3;
  repeated ItemInput items = 4;
  string request_id = 5;
}


message EvaluationResult {
  string sku_id = 1;
  double original_price = 2;
  double final_price = 3;
  string applied_campaign_id = 4;
}


message EvaluateResponse {
  string request_id = 1;
  repeated EvaluationResult results = 2;
}